# lilith-snn

lilith-rust/: Cargo.toml
lilith-rust/src/: config.rs  dataset.rs  lib.rs  surrogate.rs  tokenizer.rs  training.rs  utils.rs
lilith-rust/src/model/: encoder.rs  feedforward.rs  lif.rs  mod.rs  nord.rs  resonance.rs  stdp.rs
py_code/: README.md  chat.py  download_data.py  nord_core.py  train_nord.py
