[package]
name = "lilith-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = "0.12"
burn-tensor-nn = "0.12"
tokenizers = "0.14"
lmdb-rust = "0.14"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
